Clicking on the close tab button switches to the adjacent tab
- Epiphany version (from About Web in the main menu): 45.1
- WebKitGTK version (from About Web -> Troubleshooting -> Debugging Information): WebKitGTK 2.42.1
- Distributor (Linux operating system, Flathub, Epiphany Tech Preview, etc.): Fedora Flatpak
Observed behavior: After hovering over a tab and clicking the X icon to close the tab, the tab is switched to the one right of the closed tab.
Expected behavior: Clicking the X icon shouldn't change the tab.
Steps to reproduce:
- open 3 or more tabs
- switch to the third tab
- click the X on the first tab to close it
- observe how the tab was switched to what was previously the second tab
Edited by Andrei Sova