tab: Don't select tabs when clicking close or indicator

Supersedes https://gitlab.gnome.org/GNOME/libadwaita/-/merge_requests/1008

Fixes https://gitlab.gnome.org/GNOME/libadwaita/-/issues/765


(cherry picked from commit 54b6e3e131ee035298bf0f79a854c7838b2086f3)

(cherry picked from commit 9d8f2140a4b48db3d5e34a008fd0b58d1b5af1c5)